--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css');
 
 *{
     padding: 0;
@@ -60,6 +61,10 @@ nav{
     border-top: 6px solid #fff;
 }
 
+nav .fa-bars{
+    display: none;
+}
+
 /* <!-- Header Image --> */
 
 .header-img{
@@ -81,7 +86,6 @@ nav{
     flex-direction: column;
     justify-content: center;
     padding-left: 60px;
-    /* align-items: center; */
 }
 
 .header-heading-1{
